@@ -1,0 +1,42 @@
+<?php
+/**
+* Smarty PHPunit tests compilation of {while} tag
+* 
+* @package PHPunit
+* @author Uwe Tews 
+*/
+
+require_once '../libs/Smarty.class.php';
+
+/**
+* class for {while} tag tests
+*/
+class CompileWhileTests extends PHPUnit_Framework_TestCase {
+    public function setUp()
+    {
+        $this->smarty = new Smarty();
+        $this->smarty->plugins_dir = array('..' . DIRECTORY_SEPARATOR . 'plugins' . DIRECTORY_SEPARATOR);
+        $this->smarty->enableSecurity();
+        $this->smarty->force_compile = true;
+        $this->old_error_level = error_reporting();
+        error_reporting(E_ALL);
+    } 
+
+    public function tearDown()
+    {
+        error_reporting($this->old_error_level);
+        unset($this->smarty);
+        Smarty::$template_objects = null;
+    } 
+
+    /**
+    * test {while $x<10} tag
+    */
+    public function testWhile1()
+    {
+        $tpl = $this->smarty->createTemplate('string:{$X=0}{while $x<10}{$x}{$x=$x+1}{/while}');
+        $this->assertEquals("0123456789", $this->smarty->fetch($tpl));
+    } 
+} 
+
+?>
