@@ -1,13 +1,13 @@
 PHPUnit 3.3.15 by Sebastian Bergmann.
 
-............................................................  60 / 395
-............................................................ 120 / 395
-............................................................ 180 / 395
-............................................................ 240 / 395
-............................................................ 300 / 395
-............................................................ 360 / 395
-...................................
+............................................................  60 / 396
+............................................................ 120 / 396
+............................................................ 180 / 396
+............................................................ 240 / 396
+............................................................ 300 / 396
+............................................................ 360 / 396
+....................................
 
-Time: 7 seconds
+Time: 6 seconds
 
-OK (395 tests, 469 assertions)
+OK (396 tests, 470 assertions)
